contrib/k8s/matchbox-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matchbox
spec:
  rules:
    - host: 192.168.2.2
      http:
        paths:
          - path: /
            backend:
              serviceName: matchbox
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matchbox
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - matchbox-rpc.example.com
  rules:
    - host: matchbox-rpc.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: matchbox
              servicePort: 8081
